reviews almost done

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -149,3 +149,40 @@
     {Reinforcement Learning from Human Feedback}
 \newcommand{\rlhf}{\gls{rlhf}}
 
+\newabbreviation
+    {lora}
+    {LoRA}
+    {Low-Rank Adaptation}
+\newcommand{\lora}{\gls{lora}}
+
+\newabbreviation
+    {cot}
+    {CoT}
+    {Chain of Thought}
+\newcommand{\chain}{\gls{cot}}
+
+\newabbreviation
+    {react}
+    {ReAct}
+    {Reason-Action}
+\newcommand{\react}{\gls{react}}
+
+\newabbreviation
+    {tii}
+    {TII}
+    {Technology Innovation Institute}
+\newcommand{\tii}{\gls{tii}}
+
+
+\newabbreviation
+    {ieeta}
+    {IEETA}
+    {Institute of Electronics and Telematics Engineering of Aveiro}
+\newcommand{\ieeta}{\gls{ieeta}}
+
+
+\newabbreviation
+    {lsr}
+    {LSR}
+    {Learned Sparse Retrieval}
+\newcommand{\lsr}{\gls{lsr}}
