--- a/bib/references.bib
+++ b/bib/references.bib
@@ -2,51 +2,37 @@
 @inproceedings{nuruzzaman_survey_2018,
 	title = {A {Survey} on {Chatbot} {Implementation} in {Customer} {Service} {Industry} through {Deep} {Neural} {Networks}},
 	doi = {10.1109/ICEBE.2018.00019},
-	urldate = {2023-11-13},
 	booktitle = {2018 {IEEE} 15th {International} {Conference} on e-{Business} {Engineering} ({ICEBE})},
 	author = {Nuruzzaman, Mohammad and Hussain, Omar Khadeer},
 	month = oct,
 	year = {2018},
-	pages = {54--61},
 }
 
 
 @inproceedings{chizhik_challenges_2020,
 	title = {Challenges of {Building} an {Intelligent} {Chatbot}},
-	urldate = {2023-11-13},
 	author = {Chizhik, A. and Zherebtsova, Yulia},
 	year = {2020},
-	annote = {[TLDR] The results of data-driven chatbot implementation are presented in order to better understand the challenges of building an intelligent agent capable of replying to users with coherent and engaging responses in conversation.},
 }
 
 @inproceedings{ayanouz_smart_2020,
-	address = {New York, NY, USA},
-	series = {{NISS2020}},
 	title = {A {Smart} {Chatbot} {Architecture} based {NLP} and {Machine} {Learning} for {Health} {Care} {Assistance}},
 	isbn = {978-1-4503-7634-1},
 	doi = {10.1145/3386723.3387897},
-	urldate = {2023-11-13},
 	booktitle = {Proceedings of the 3rd {International} {Conference} on {Networking}, {Information} {Systems} \& {Security}},
-	publisher = {Association for Computing Machinery},
 	author = {Ayanouz, Soufyane and Abdelhakim, Boudhir Anouar and Benhmed, Mohammed},
 	year = {2020},
-	keywords = {artificial intelligence, Chatbots, conversational agents, modeling of conversations, natural language, neural machine translation},
-	pages = {1--6},
 }
 
 
 @article{ngai_intelligent_2021,
 	title = {An intelligent knowledge-based chatbot for customer service},
-	volume = {50},
 	issn = {1567-4223},
 	doi = {10.1016/j.elerap.2021.101098},
-	urldate = {2023-11-13},
 	journal = {Electronic Commerce Research and Applications},
 	author = {Ngai, Eric W. T. and Lee, Maggie C. M. and Luo, Mei and Chan, Patrick S. L. and Liang, Tenglu},
 	month = nov,
 	year = {2021},
-	keywords = {Case analysis, Chatbot, Conversational agent, Knowledge-based system, System design},
-	pages = {101098},
 }
 
 @incollection{p_m_efficient_2021,
@@ -56,7 +42,6 @@
 	month = jan,
 	year = {2021},
 	doi = {10.1007/978-981-15-5400-1_52},
-	pages = {505--519},
 }
 
 @article{manning_introduction_2009,
@@ -68,25 +53,17 @@
 
 @article{hambarde_information_2023,
 	title = {Information {Retrieval}: {Recent} {Advances} and {Beyond}},
-	volume = {11},
 	issn = {2169-3536},
-	shorttitle = {Information {Retrieval}},
 	doi = {10.1109/ACCESS.2023.3295776},
-	language = {en},
-	urldate = {2023-12-06},
 	journal = {IEEE Access},
 	author = {Hambarde, Kailash A. and Proença, Hugo},
 	year = {2023},
-	pages = {76581--76604},
 }
 
 
 @misc{phd_understanding_2023,
 	title = {Understanding the {BM25} {Ranking} {Algorithm}},
 	url = {https://medium.com/@evertongomede/understanding-the-bm25-ranking-algorithm-19f6d45c6ce},
-	abstract = {Introduction},
-	language = {en},
-	urldate = {2023-12-06},
 	journal = {Medium},
 	author = {Everton Gomede},
 	month = sep,
@@ -95,24 +72,18 @@
 
 @article{zhong_building_2020,
 	title = {A building regulation question answering system: {A} deep learning methodology},
-	volume = {46},
 	issn = {14740346},
-	shorttitle = {A building regulation question answering system},
 	doi = {10.1016/j.aei.2020.101195},
-	language = {en},
-	urldate = {2023-12-06},
 	journal = {Advanced Engineering Informatics},
 	author = {Zhong, Botao and He, Wanlei and Huang, Ziwei and Love, Peter E.D. and Tang, Junqing and Luo, Hanbin},
 	month = oct,
 	year = {2020},
-	pages = {101195},
 }
 
 @article{hadi_LLM_2023,
     author = {Hadi, Muhammad Usman and Al-Tashi, Qasem and Qureshi, Rizwan and Shah, Abbas and Muneer, Amgad and Irfan, Muhammad and Zafar, Anas and Shaikh, Muhammad and Akhtar, Naveed and Wu, Jia and Mirjalili, Seyedali},
     year = {2023},
     month = {07},
-    pages = {},
     title = {Large Language Models: A Comprehensive Survey of its Applications, Challenges, Limitations, and Future Prospects},
     doi = {10.36227/techrxiv.23589741}
 }
@@ -120,129 +91,95 @@
 
 @article{liu_prompting_nodate,
 	title = {Prompting {Frameworks} for {Large} {Language} {Models}: {A} {Survey}},
-	volume = {1},
-	language = {en},
-	number = {1},
 	journal = {ACM Comput. Surv.},
 	author = {Liu, Xiaoxia and Wang, Jingyi and Sun, Jun and Yuan, Xiaohan and Dong, Guoliang and Di, Peng and Wang, Wenhai and Wang, Dongxia},
 }
 
 @misc{naveed_comprehensive_2023,
 	title = {A {Comprehensive} {Overview} of {Large} {Language} {Models}},
-	urldate = {2023-12-15},
 	publisher = {arXiv},
 	author = {Naveed, Humza and Khan, Asad Ullah and Qiu, Shi and Saqib, Muhammad and Anwar, Saeed and Usman, Muhammad and Akhtar, Naveed and Barnes, Nick and Mian, Ajmal},
 	month = nov,
 	year = {2023},
-	note = {arXiv:2307.06435 [cs]},
-	keywords = {Computer Science - Computation and Language},
 }
 
 @misc{vaswani_attention_2023,
 	title = {Attention {Is} {All} {You} {Need}},
-	urldate = {2023-12-04},
 	publisher = {arXiv},
 	author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
 	month = aug,
 	year = {2023},
-	note = {arXiv:1706.03762 [cs]},
-	keywords = {Computer Science - Computation and Language, Computer Science - Machine Learning},
 }
 
 @misc{noauthor_openai_nodate,
 	title = {{OpenAI} {Platform}},
 	url = {https://platform.openai.com},
 	language = {en},
-	urldate = {2023-12-15},
 }
 
 
 @article{mesko_prompt_2023,
 	title = {Prompt {Engineering} as an {Important} {Emerging} {Skill} for {Medical} {Professionals}: {Tutorial}},
-	volume = {25},
 	issn = {1438-8871},
-	shorttitle = {Prompt {Engineering} as an {Important} {Emerging} {Skill} for {Medical} {Professionals}},
 	doi = {10.2196/50638},
-	language = {en},
-	urldate = {2023-12-21},
 	journal = {Journal of Medical Internet Research},
 	author = {Meskó, Bertalan},
 	month = oct,
 	year = {2023},
-	pages = {e50638},
 }
 
 @misc{ma_beyond_2023,
 	title = {Beyond {ChatBots}: {ExploreLLM} for {Structured} {Thoughts} and {Personalized} {Model} {Responses}},
-	shorttitle = {Beyond {ChatBots}},
-	urldate = {2023-12-21},
 	publisher = {arXiv},
 	author = {Ma, Xiao and Mishra, Swaroop and Liu, Ariel and Su, Sophie and Chen, Jilin and Kulkarni, Chinmay and Cheng, Heng-Tze and Le, Quoc and Chi, Ed},
 	month = dec,
 	year = {2023},
-	note = {arXiv:2312.00763 [cs]},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language, Computer Science - Human-Computer Interaction, Computer Science - Machine Learning},
-	annote = {Comment: 19 pages, 11 figures},
 }
 
 
 
 @inproceedings{lewis_retrieval-augmented_2020,
-	address = {Red Hook, NY, USA},
-	series = {{NIPS}'20},
 	title = {Retrieval-augmented generation for knowledge-intensive {NLP} tasks},
 	isbn = {978-1-71382-954-6},
-	urldate = {2023-12-24},
 	booktitle = {Proceedings of the 34th {International} {Conference} on {Neural} {Information} {Processing} {Systems}},
 	publisher = {Curran Associates Inc.},
 	author = {Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and Küttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rocktäschel, Tim and Riedel, Sebastian and Kiela, Douwe},
 	month = dec,
 	year = {2020},
-	pages = {9459--9474},
 }
 
 @misc{gao_retrieval-augmented_2023,
 	title = {Retrieval-{Augmented} {Generation} for {Large} {Language} {Models}: {A} {Survey}},
-	shorttitle = {Retrieval-{Augmented} {Generation} for {Large} {Language} {Models}},
 	doi = {10.48550/arXiv.2312.10997},
-	urldate = {2023-12-24},
 	publisher = {arXiv},
 	author = {Gao, Yunfan and Xiong, Yun and Gao, Xinyu and Jia, Kangxiang and Pan, Jinliu and Bi, Yuxi and Dai, Yi and Sun, Jiawei and Wang, Haofen},
 	month = dec,
 	year = {2023},
-	note = {arXiv:2312.10997 [cs]},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
 }
 
 
 
 @misc{touvron_llama_2023,
 	title = {Llama 2: {Open} {Foundation} and {Fine}-{Tuned} {Chat} {Models}},
-	shorttitle = {Llama 2},
 	doi = {10.48550/arXiv.2307.09288},
-	urldate = {2024-01-06},
 	publisher = {arXiv},
 	author = {Touvron, Hugo and Martin, Louis and Stone, Kevin and Albert, Peter and Almahairi, Amjad and Babaei, Yasmine and Bashlykov, Nikolay and Batra, Soumya and Bhargava, Prajjwal and Bhosale, Shruti and Bikel, Dan and Blecher, Lukas and Ferrer, Cristian Canton and Chen, Moya and Cucurull, Guillem and Esiobu, David and Fernandes, Jude and Fu, Jeremy and Fu, Wenyin and Fuller, Brian and Gao, Cynthia and Goswami, Vedanuj and Goyal, Naman and Hartshorn, Anthony and Hosseini, Saghar and Hou, Rui and Inan, Hakan and Kardas, Marcin and Kerkez, Viktor and Khabsa, Madian and Kloumann, Isabel and Korenev, Artem and Koura, Punit Singh and Lachaux, Marie-Anne and Lavril, Thibaut and Lee, Jenya and Liskovich, Diana and Lu, Yinghai and Mao, Yuning and Martinet, Xavier and Mihaylov, Todor and Mishra, Pushkar and Molybog, Igor and Nie, Yixin and Poulton, Andrew and Reizenstein, Jeremy and Rungta, Rashi and Saladi, Kalyan and Schelten, Alan and Silva, Ruan and Smith, Eric Michael and Subramanian, Ranjan and Tan, Xiaoqing Ellen and Tang, Binh and Taylor, Ross and Williams, Adina and Kuan, Jian Xiang and Xu, Puxin and Yan, Zheng and Zarov, Iliyan and Zhang, Yuchen and Fan, Angela and Kambadur, Melanie and Narang, Sharan and Rodriguez, Aurelien and Stojnic, Robert and Edunov, Sergey and Scialom, Thomas},
 	month = jul,
 	year = {2023},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
 }
 
 @misc{openai_gpt-4_2023,
 	title = {{GPT}-4 {Technical} {Report}},
 	doi = {10.48550/arXiv.2303.08774},
-	urldate = {2024-01-06},
 	publisher = {arXiv},
 	author = {OpenAI and Achiam, Josh and Adler, Steven and Agarwal, Sandhini and Ahmad, Lama and Akkaya, Ilge and Aleman, Florencia Leoni and Almeida, Diogo and Altenschmidt, Janko and Altman, Sam and Anadkat, Shyamal and Avila, Red and Babuschkin, Igor and Balaji, Suchir and Balcom, Valerie and Baltescu, Paul and Bao, Haiming and Bavarian, Mo and Belgum, Jeff and Bello, Irwan and Berdine, Jake and Bernadett-Shapiro, Gabriel and Berner, Christopher and Bogdonoff, Lenny and Boiko, Oleg and Boyd, Madelaine and Brakman, Anna-Luisa and Brockman, Greg and Brooks, Tim and Brundage, Miles and Button, Kevin and Cai, Trevor and Campbell, Rosie and Cann, Andrew and Carey, Brittany and Carlson, Chelsea and Carmichael, Rory and Chan, Brooke and Chang, Che and Chantzis, Fotis and Chen, Derek and Chen, Sully and Chen, Ruby and Chen, Jason and Chen, Mark and Chess, Ben and Cho, Chester and Chu, Casey and Chung, Hyung Won and Cummings, Dave and Currier, Jeremiah and Dai, Yunxing and Decareaux, Cory and Degry, Thomas and Deutsch, Noah and Deville, Damien and Dhar, Arka and Dohan, David and Dowling, Steve and Dunning, Sheila and Ecoffet, Adrien and Eleti, Atty and Eloundou, Tyna and Farhi, David and Fedus, Liam and Felix, Niko and Fishman, Simón Posada and Forte, Juston and Fulford, Isabella and Gao, Leo and Georges, Elie and Gibson, Christian and Goel, Vik and Gogineni, Tarun and Goh, Gabriel and Gontijo-Lopes, Rapha and Gordon, Jonathan and Grafstein, Morgan and Gray, Scott and Greene, Ryan and Gross, Joshua and Gu, Shixiang Shane and Guo, Yufei and Hallacy, Chris and Han, Jesse and Harris, Jeff and He, Yuchen and Heaton, Mike and Heidecke, Johannes and Hesse, Chris and Hickey, Alan and Hickey, Wade and Hoeschele, Peter and Houghton, Brandon and Hsu, Kenny and Hu, Shengli and Hu, Xin and Huizinga, Joost and Jain, Shantanu and Jain, Shawn and Jang, Joanne and Jiang, Angela and Jiang, Roger and Jin, Haozhun and Jin, Denny and Jomoto, Shino and Jonn, Billie and Jun, Heewoo and Kaftan, Tomer and Kaiser, Łukasz and Kamali, Ali and Kanitscheider, Ingmar and Keskar, Nitish Shirish and Khan, Tabarak and Kilpatrick, Logan and Kim, Jong Wook and Kim, Christina and Kim, Yongjik and Kirchner, Hendrik and Kiros, Jamie and Knight, Matt and Kokotajlo, Daniel and Kondraciuk, Łukasz and Kondrich, Andrew and Konstantinidis, Aris and Kosic, Kyle and Krueger, Gretchen and Kuo, Vishal and Lampe, Michael and Lan, Ikai and Lee, Teddy and Leike, Jan and Leung, Jade and Levy, Daniel and Li, Chak Ming and Lim, Rachel and Lin, Molly and Lin, Stephanie and Litwin, Mateusz and Lopez, Theresa and Lowe, Ryan and Lue, Patricia and Makanju, Anna and Malfacini, Kim and Manning, Sam and Markov, Todor and Markovski, Yaniv and Martin, Bianca and Mayer, Katie and Mayne, Andrew and McGrew, Bob and McKinney, Scott Mayer and McLeavey, Christine and McMillan, Paul and McNeil, Jake and Medina, David and Mehta, Aalok and Menick, Jacob and Metz, Luke and Mishchenko, Andrey and Mishkin, Pamela and Monaco, Vinnie and Morikawa, Evan and Mossing, Daniel and Mu, Tong and Murati, Mira and Murk, Oleg and Mély, David and Nair, Ashvin and Nakano, Reiichiro and Nayak, Rajeev and Neelakantan, Arvind and Ngo, Richard and Noh, Hyeonwoo and Ouyang, Long and O'Keefe, Cullen and Pachocki, Jakub and Paino, Alex and Palermo, Joe and Pantuliano, Ashley and Parascandolo, Giambattista and Parish, Joel and Parparita, Emy and Passos, Alex and Pavlov, Mikhail and Peng, Andrew and Perelman, Adam and Peres, Filipe de Avila Belbute and Petrov, Michael and Pinto, Henrique Ponde de Oliveira and Michael and Pokorny and Pokrass, Michelle and Pong, Vitchyr and Powell, Tolly and Power, Alethea and Power, Boris and Proehl, Elizabeth and Puri, Raul and Radford, Alec and Rae, Jack and Ramesh, Aditya and Raymond, Cameron and Real, Francis and Rimbach, Kendra and Ross, Carl and Rotsted, Bob and Roussez, Henri and Ryder, Nick and Saltarelli, Mario and Sanders, Ted and Santurkar, Shibani and Sastry, Girish and Schmidt, Heather and Schnurr, David and Schulman, John and Selsam, Daniel and Sheppard, Kyla and Sherbakov, Toki and Shieh, Jessica and Shoker, Sarah and Shyam, Pranav and Sidor, Szymon and Sigler, Eric and Simens, Maddie and Sitkin, Jordan and Slama, Katarina and Sohl, Ian and Sokolowsky, Benjamin and Song, Yang and Staudacher, Natalie and Such, Felipe Petroski and Summers, Natalie and Sutskever, Ilya and Tang, Jie and Tezak, Nikolas and Thompson, Madeleine and Tillet, Phil and Tootoonchian, Amin and Tseng, Elizabeth and Tuggle, Preston and Turley, Nick and Tworek, Jerry and Uribe, Juan Felipe Cerón and Vallone, Andrea and Vijayvergiya, Arun and Voss, Chelsea and Wainwright, Carroll and Wang, Justin Jay and Wang, Alvin and Wang, Ben and Ward, Jonathan and Wei, Jason and Weinmann, C. J. and Welihinda, Akila and Welinder, Peter and Weng, Jiayi and Weng, Lilian and Wiethoff, Matt and Willner, Dave and Winter, Clemens and Wolrich, Samuel and Wong, Hannah and Workman, Lauren and Wu, Sherwin and Wu, Jeff and Wu, Michael and Xiao, Kai and Xu, Tao and Yoo, Sarah and Yu, Kevin and Yuan, Qiming and Zaremba, Wojciech and Zellers, Rowan and Zhang, Chong and Zhang, Marvin and Zhao, Shengjia and Zheng, Tianhao and Zhuang, Juntang and Zhuk, William and Zoph, Barret},
 	month = dec,
 	year = {2023},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
 }
 
 @misc{anil_palm_2023,
 	title = {{PaLM} 2 {Technical} {Report}},
 	doi = {10.48550/arXiv.2305.10403},
-	urldate = {2024-01-06},
 	publisher = {arXiv},
 	author = {Anil, Rohan and Dai, Andrew M. and Firat, Orhan and Johnson, Melvin and Lepikhin, Dmitry and Passos, Alexandre and Shakeri, Siamak and Taropa, Emanuel and Bailey, Paige and Chen, Zhifeng and Chu, Eric and Clark, Jonathan H. and Shafey, Laurent El and Huang, Yanping and Meier-Hellstern, Kathy and Mishra, Gaurav and Moreira, Erica and Omernick, Mark and Robinson, Kevin and Ruder, Sebastian and Tay, Yi and Xiao, Kefan and Xu, Yuanzhong and Zhang, Yujing and Abrego, Gustavo Hernandez and Ahn, Junwhan and Austin, Jacob and Barham, Paul and Botha, Jan and Bradbury, James and Brahma, Siddhartha and Brooks, Kevin and Catasta, Michele and Cheng, Yong and Cherry, Colin and Choquette-Choo, Christopher A. and Chowdhery, Aakanksha and Crepy, Clément and Dave, Shachi and Dehghani, Mostafa and Dev, Sunipa and Devlin, Jacob and Díaz, Mark and Du, Nan and Dyer, Ethan and Feinberg, Vlad and Feng, Fangxiaoyu and Fienber, Vlad and Freitag, Markus and Garcia, Xavier and Gehrmann, Sebastian and Gonzalez, Lucas and Gur-Ari, Guy and Hand, Steven and Hashemi, Hadi and Hou, Le and Howland, Joshua and Hu, Andrea and Hui, Jeffrey and Hurwitz, Jeremy and Isard, Michael and Ittycheriah, Abe and Jagielski, Matthew and Jia, Wenhao and Kenealy, Kathleen and Krikun, Maxim and Kudugunta, Sneha and Lan, Chang and Lee, Katherine and Lee, Benjamin and Li, Eric and Li, Music and Li, Wei and Li, YaGuang and Li, Jian and Lim, Hyeontaek and Lin, Hanzhao and Liu, Zhongtao and Liu, Frederick and Maggioni, Marcello and Mahendru, Aroma and Maynez, Joshua and Misra, Vedant and Moussalem, Maysam and Nado, Zachary and Nham, John and Ni, Eric and Nystrom, Andrew and Parrish, Alicia and Pellat, Marie and Polacek, Martin and Polozov, Alex and Pope, Reiner and Qiao, Siyuan and Reif, Emily and Richter, Bryan and Riley, Parker and Ros, Alex Castro and Roy, Aurko and Saeta, Brennan and Samuel, Rajkumar and Shelby, Renee and Slone, Ambrose and Smilkov, Daniel and So, David R. and Sohn, Daniel and Tokumine, Simon and Valter, Dasha and Vasudevan, Vijay and Vodrahalli, Kiran and Wang, Xuezhi and Wang, Pidong and Wang, Zirui and Wang, Tao and Wieting, John and Wu, Yuhuai and Xu, Kelvin and Xu, Yunhan and Xue, Linting and Yin, Pengcheng and Yu, Jiahui and Zhang, Qiao and Zheng, Steven and Zheng, Ce and Zhou, Weikang and Zhou, Denny and Petrov, Slav and Wu, Yonghui},
 	month = sep,
@@ -252,7 +189,6 @@
 @misc{almazrouei_falcon_2023,
 	title = {The {Falcon} {Series} of {Open} {Language} {Models}},
 	doi = {10.48550/arXiv.2311.16867},
-	urldate = {2024-01-06},
 	publisher = {arXiv},
 	author = {Almazrouei, Ebtesam and Alobeidli, Hamza and Alshamsi, Abdulaziz and Cappelli, Alessandro and Cojocaru, Ruxandra and Debbah, Mérouane and Goffinet, Étienne and Hesslow, Daniel and Launay, Julien and Malartic, Quentin and Mazzotta, Daniele and Noune, Badreddine and Pannier, Baptiste and Penedo, Guilherme},
 	month = nov,
@@ -266,13 +202,10 @@
 	volume = {466},
 	issn = {0257-8972},
 	doi = {10.1016/j.surfcoat.2023.129680},
-	urldate = {2024-01-09},
 	journal = {Surface and Coatings Technology},
 	author = {Kamnis, Spyros},
 	month = aug,
 	year = {2023},
-	keywords = {Generative AI, GPT, Large language model, LLM, NLP, Thermal spray},
-	pages = {129680},
 }
 
 
@@ -280,14 +213,12 @@
 @book{informatics_chapter_nodate,
 	title = {Chapter 10 {Defining} {Cohorts} {\textbar} {The} {Book} of {OHDSI}},
 	url = {https://ohdsi.github.io/TheBookOfOhdsi/},
-	urldate = {2024-01-03},
 	author = {OHDSI},
 }
 
 @misc{noauthor_jquery_nodate,
 	title = {{jQuery} {QueryBuilder}},
 	url = {https://querybuilder.js.org/},
-	urldate = {2024-01-04},
 }
 
 
@@ -309,12 +240,10 @@
 
 @misc{chang_language_2023,
 	title = {Language {Model} {Behavior}: {A} {Comprehensive} {Survey}},
-	shorttitle = {Language {Model} {Behavior}},
 	publisher = {arXiv},
 	author = {Chang, Tyler A. and Bergen, Benjamin K.},
 	month = aug,
 	year = {2023},
-	keywords = {Computer Science - Computation and Language},
 }
 
 
@@ -346,10 +275,8 @@
 
 @article{misischia_chatbots_2022,
 	title = {Chatbots in customer service: {Their} relevance and impact on service quality},
-	volume = {201},
 	issn = {1877-0509},
 	doi = {10.1016/j.procs.2022.03.055},
-	urldate = {2024-12-15},
 	author = {Misischia, Chiara Valentina and Poecze, Flora and Strauss, Christine},
 	month = jan,
 	year = {2022},
@@ -370,8 +297,6 @@
 	title = {Human-{Centered} {Reinforcement} {Learning}: {A} {Survey}},
 	issn = {2168-2305},
 	doi = {10.1109/THMS.2019.2912447},
-	number = {4},
-	urldate = {2024-01-17},
 	journal = {IEEE Transactions on Human-Machine Systems},
 	author = {Li, Guangliang and Gomez, Randy and Nakamura, Keisuke and He, Bo},
 	month = aug,
@@ -430,7 +355,6 @@
 
 @article{lan_research_2022,
 	title = {Research on {Text} {Similarity} {Measurement} {Hybrid} {Algorithm} with {Term} {Semantic} {Information} and {TF}-{IDF} {Method}},
-	volume = {2022},
 	issn = {1687-5680},
 	doi = {10.1155/2022/7923262},
 	journal = {Advances in Multimedia},
@@ -456,7 +380,6 @@
 
 @article{church_emerging_2023,
 	title = {Emerging trends: {Smooth}-talking machines},
-	volume = {29},
 	issn = {1351-3249},
 	doi = {10.1017/S1351324923000463},
 	journal = {Natural Language Engineering},
@@ -467,7 +390,6 @@
 
 @article{kshetri_cybercrime_2023,
 	title = {Cybercrime and {Privacy} {Threats} of {Large} {Language} {Models}},
-	volume = {25},
 	issn = {1520-9202},
 	doi = {10.1109/MITP.2023.3275489},
 	journal = {IT Professional},
@@ -480,7 +402,6 @@
 @misc{noauthor_introducing_2021,
 	title = {Introducing {Query} {Builder}: write complex queries without code},
 	url = {https://www.dronahq.com/introducing-query-builder/},
-	urldate = {2024-01-05},
 	journal = {DronaHQ},
 	month = aug,
 	year = {2021},
@@ -506,8 +427,6 @@
   title="{MONTRA2: A web platform for profiling distributed databases in the health domain}",
   author={Almeida, Jo{\~a}o Rafael and Oliveira, Jos{\'e} Lu{\'\i}s},
   journal={Informatics in Medicine Unlocked},
-  volume={45},
-  pages={101447},
   year={2024},
   publisher={Elsevier},
   doi={10.1016/j.imu.2024.101447}
@@ -523,12 +442,8 @@
 }
 
 
-
-
-
 @misc{formal_splade_2021,
 	title = {{SPLADE}: {Sparse} {Lexical} and {Expansion} {Model} for {First} {Stage} {Ranking}},
-	shorttitle = {{SPLADE}},
 	doi = {10.48550/arXiv.2107.05720},
 	publisher = {arXiv},
 	author = {Formal, Thibault and Piwowarski, Benjamin and Clinchant, Stéphane},
@@ -538,7 +453,6 @@
 
 @misc{formal_distillation_2022,
 	title = {From {Distillation} to {Hard} {Negative} {Sampling}: {Making} {Sparse} {Neural} {IR} {Models} {More} {Effective}},
-	shorttitle = {From {Distillation} to {Hard} {Negative} {Sampling}},
 	doi = {10.48550/arXiv.2205.04733},
 	publisher = {arXiv},
 	author = {Formal, Thibault and Lassance, Carlos and Piwowarski, Benjamin and Clinchant, Stéphane},
@@ -548,7 +462,6 @@
 
 @misc{chen_bge_2024,
 	title = {{BGE} {M3}-{Embedding}: {Multi}-{Lingual}, {Multi}-{Functionality}, {Multi}-{Granularity} {Text} {Embeddings} {Through} {Self}-{Knowledge} {Distillation}},
-	shorttitle = {{BGE} {M3}-{Embedding}},
 	doi = {10.48550/arXiv.2402.03216},
 	publisher = {arXiv},
 	author = {Chen, Jianlv and Xiao, Shitao and Zhang, Peitian and Luo, Kun and Lian, Defu and Liu, Zheng},
@@ -569,9 +482,6 @@
   year = {2024},
   month = jan,
   journal = {arXiv:2401.04088},
-  eprint = {2401.04088},
-  url = {https://arxiv.org/abs/2401.04088},
-  archiveprefix = {arxiv}
 }
 
 
@@ -579,8 +489,6 @@
   title={Clinical comparison between trial participants and potentially eligible patients using electronic health record data: a generalizability assessment method},
   author={Rogers, James R and Hripcsak, George and Cheung, Ying Kuen and Weng, Chunhua},
   journal={Journal of biomedical informatics},
-  volume={119},
-  pages={103822},
   year={2021},
   publisher={Elsevier},
   doi={10.1016/j.jbi.2021.103822}
@@ -590,8 +498,6 @@
   title="{Using a federated network of real-world data to optimize clinical trials operations}",
   author={Topaloglu, Umit and Topaloglu, Matvey B},
   journal={JCO clinical cancer informatics},
-  volume={2},
-  pages={1--10},
   year={2018},
   publisher={American Society of Clinical Oncology},
   doi={10.1200/CCI.17.00067}
@@ -601,7 +507,6 @@
   title="{Electronic health records (EHRs) in clinical research and platform trials: Application of the innovative EHR-based methods developed by EU-PEARL}",
   author={Lombardo, Giulia and Couvert, Camille and Kose, Melisa and Begum, Amina and Spiertz, Cecile and Worrell, Courtney and Hasselbaink, Danny and Didden, Eva-Maria and Sforzini, Luca and Todorovic, Marija and others},
   journal={Journal of Biomedical Informatics},
-  pages={104553},
   year={2023},
   publisher={Elsevier},
   doi={10.1016/j.jbi.2023.104553}
@@ -610,8 +515,6 @@
 @article{almeida2021methodology,
   title = "{A methodology for cohort harmonisation in multicentre clinical research}",
   journal={Informatics in Medicine Unlocked},
-  pages={100760},
-  volume={Volume 27},
   year={2021},
   publisher={Elsevier},
   doi = {10.1016/j.imu.2021.100760},
@@ -622,9 +525,6 @@
   title="{A research agenda for Personal Health Records (PHRs)}",
   author={Kaelber, David C and Jha, Ashish K and Johnston, Douglas and Middleton, Blackford and Bates, David W},
   journal={Journal of the American Medical Informatics Association},
-  volume={15},
-  number={6},
-  pages={729--736},
   year={2008},
   publisher={BMJ Group BMA House},
   doi={10.1197/jamia.M2547}
@@ -634,8 +534,6 @@
   title={Querying semantic catalogues of biomedical databases},
   author={Pereira, Arnaldo and Almeida, Jo{\~a}o Rafael and Lopes, Rui Pedro and Oliveira, Jos{\'e} Lu{\'\i}s},
   journal={Journal of Biomedical Informatics},
-  volume={137},
-  pages={104272},
   year={2023},
   publisher={Elsevier},
   doi={10.1016/j.jbi.2022.104272}
@@ -645,7 +543,6 @@
   title="{A secure architecture for exploring patient-level databases from distributed institutions}",
   author={Almeida, Jo{\~a}o Rafael and Barraca, Joao Paulo and Oliveira, Jos{\'e} Lu{\'\i}s},
   booktitle={2022 IEEE 35th International Symposium on Computer-Based Medical Systems (CBMS)},
-  pages={447--452},
   year={2022},
   organization={IEEE},
   doi={10.1109/CBMS55023.2022.00086}
@@ -655,9 +552,6 @@
   title="{Characterizing treatment pathways at scale using the OHDSI network}",
   author={George Hripcsak and Patrick B. Ryan and Jon D. Duke and Nigam H. Shah and Rae Woong Park and Vojtech Huser and Marc A. Suchard and Martijn J. Schuemie and Frank J. DeFalco and Adler Perotte and Juan M. Banda and Christian G. Reich and Lisa M. Schilling and Michael E. Matheny and Daniella Meeker and Nicole Pratt and David Madigan},
   journal={Proceedings of the National Academy of Sciences},
-  volume={113},
-  number={27},
-  pages={7329--7336},
   year={2016},
   publisher={National Acad Sciences},
   doi={10.1073/pnas.1510502113}
@@ -667,9 +561,6 @@
   title={Exploring the potential of OMOP common data model for process mining in healthcare},
   author={Park, Kangah and Cho, Minsu and Song, Minseok and Yoo, Sooyoung and Baek, Hyunyoung and Kim, Seok and Kim, Kidong},
   journal={Plos one},
-  volume={18},
-  number={1},
-  pages={e0279641},
   year={2023},
   publisher={Public Library of Science San Francisco, CA USA},
   doi={10.1371/journal.pone.0279641}
@@ -679,9 +570,6 @@
   title="{A two-stage workflow to extract and harmonize drug mentions from clinical notes into observational databases}",
   author={Almeida, Jo{\~a}o Rafael and Silva, Jo{\~a}o Figueira and Matos, S{\'e}rgio and Oliveira, Jos{\'e} Lu{\'\i}s},
   journal={Journal of Biomedical Informatics},
-  volume={120},
-  pages={103849},
-  year={2021},
   publisher={Elsevier},
   doi={10.1016/j.jbi.2021.103849}
 }
@@ -690,7 +578,6 @@
   title="{OHDSI Standardized Vocabularies—a large-scale centralized reference ontology for international data harmonization}",
   author={Reich, Christian and Ostropolets, Anna and Ryan, Patrick and Rijnbeek, Peter and Schuemie, Martijn and Davydov, Alexander and Dymshyts, Dmitry and Hripcsak, George},
   journal={Journal of the American Medical Informatics Association},
-  pages={ocad247},
   year={2024},
   publisher={Oxford University Press},
   doi={10.1093/jamia/ocad247}
@@ -700,7 +587,6 @@
   title="{Clinical Data Integration Strategies for Multicenter Studies}",
   author={Almeida, Jo{\~a}o Rafael and Pazos, Alejandro and Oliveira, Jos{\'e} Lu{\'\i}s},
   booktitle={Doctoral Conference on Computing, Electrical and Industrial Systems},
-  pages={175--190},
   year={2023},
   organization={Springer},
   doi={10.1007/978-3-031-36007-7_13}
@@ -710,7 +596,6 @@
   title="{A FAIR approach to real-world health data management and analysis}",
   author={Almeida, Jo{\~a}o Rafael and Silva, Jorge Miguel and Oliveira, Jos{\'e} Lu{\'\i}s},
   booktitle={2023 IEEE 36th International Symposium on Computer-Based Medical Systems (CBMS)},
-  pages={892--897},
   year={2023},
   organization={IEEE},
   doi={10.1109/CBMS58004.2023.00338}
@@ -721,7 +606,6 @@
   title={Development and usability evaluation of a prototype conversational interface for biological information retrieval via bioinformatics},
   author={Ritzel Paix{\~a}o-C{\^o}rtes, Walter and Stangherlin Machado Paix{\~a}o-C{\^o}rtes, Vanessa and Ellwanger, Cristiane and Norberto de Souza, Osmar},
   booktitle={Human Interface and the Management of Information. Visual Information and Knowledge Management: Thematic Area, HIMI 2019, Held as Part of the 21st HCI International Conference, HCII 2019, Orlando, FL, USA, July 26--31, 2019, Proceedings, Part I 21},
-  pages={575--593},
   year={2019},
   organization={Springer},
   doi={10.1007/978-3-030-22660-2_43}
@@ -749,4 +633,52 @@
   booktitle={2024 IEEE 37th International Symposium on Computer-Based Medical Systems (CBMS)},
   year={2024},
   organization={IEEE}
+}
+
+@article{silva2018montra,
+  title="{MONTRA: An agile architecture for data publishing and discovery}",
+  author={Silva, Lu{\'\i}s Basti{\~a}o and Trifan, Alina and Oliveira, Jos{\'e} Lu{\'\i}s},
+  journal={Computer methods and programs in biomedicine},
+  year={2018},
+  publisher={Elsevier},
+  doi={10.1016/j.cmpb.2018.03.024}
+}
+
+@article{oliveira2019emif,
+  title="{EMIF Catalogue: a collaborative platform for sharing and reusing biomedical data}",
+  author={Oliveira, Jos{\'e} Lu{\'\i}s and Trifan, Alina and Silva, Lu{\'\i}s A Basti{\~a}o},
+  journal={International journal of medical informatics},
+  year={2019},
+  publisher={Elsevier},
+  doi={10.1016/j.ijmedinf.2019.02.006}
+}
+
+
+@inproceedings{liu_deep_2022,
+	title = {Deep {Text} {Retrieval} {Models} based on {DNN}, {CNN}, {RNN} and {Transformer}: {A} review},
+	doi = {10.1109/CCIS57298.2022.10016379},
+	booktitle = {2022 {IEEE} 8th {International} {Conference} on {Cloud} {Computing} and {Intelligent} {Systems} ({CCIS})},
+	author = {Liu, Jianping and Chu, Xintao and Wang, Yingfei and Wang, Meng},
+	month = nov,
+	year = {2022},
+}
+
+@misc{zhao_survey_2023,
+	title = {A {Survey} of {Large} {Language} {Models}},
+	doi = {10.48550/arXiv.2303.18223},
+	publisher = {arXiv},
+	author = {Zhao, Wayne Xin and Zhou, Kun and Li, Junyi and Tang, Tianyi and Wang, Xiaolei and Hou, Yupeng and Min, Yingqian and Zhang, Beichen and Zhang, Junjie and Dong, Zican and Du, Yifan and Yang, Chen and Chen, Yushuo and Chen, Zhipeng and Jiang, Jinhao and Ren, Ruiyang and Li, Yifan and Tang, Xinyu and Liu, Zikang and Liu, Peiyu and Nie, Jian-Yun and Wen, Ji-Rong},
+	month = nov,
+	year = {2023},
+}
+
+
+
+@article{borah_survey_2019,
+	title = {Survey of {Textbased} {Chatbot} in {Perspective} of {Recent} {Technologies}},
+	issn = {1865-0929},
+	doi = {10.1007/978-981-13-8581-0_7},
+	journal = {Communications in Computer and Information Science},
+	author = {Borah, B. and Pathak, D. and Sarmah, P. and Som, B. and Nandi, S.},
+	year = {2019},
 }
