--- a/cover.tex
+++ b/cover.tex
@@ -181,7 +181,7 @@
 
 %%% OPTIONAL: Add an acknowledgement text
 %% Optional Acknowledgement text
-\Acknowledgements{Em primeiro lugar, expresso minha profunda gratidão aos meus orientadores, especialmente ao Professor Auxiliar João Rafael Almeida. O seu apoio foi além da orientação do projeto; guiou-me e desafiou-me ao longo de todo este processo, motivando-me a superar e enfrentar novos desafios. Agradeço também ao colaborador desta dissertação, Tiago Almeida, que sempre esteve disponível para me aconselhar e guiar no melhor caminho.
+\Acknowledgements{Em primeiro lugar, expresso minha profunda gratidão aos meus orientadores, especialmente ao Professor João Rafael Almeida. O seu apoio foi além da orientação do projeto; guiou-me e desafiou-me ao longo de todo este processo, motivando-me a superar e enfrentar novos desafios. Agradeço também ao colaborador desta dissertação, Tiago Almeida, que sempre esteve disponível para me aconselhar e guiar no melhor caminho.
 
 A todos os meus amigos, estou imensamente grato pelo constante companheirismo e pela partilha da vida académica ao longo dos últimos anos. À Inês, um agradecimento especial pela paciência e pelo suporte incondicional.
 
@@ -196,8 +196,8 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 %%%  declaration.
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation
 %% Mandatory Keywords and Abstract in Portuguese
-\Abstract{Palavras Chave}{Sistema conversacional de pesquisa, Descoberta de dados biomédicos, LLM, RAG, OMOP CDM, EHDEN, OHDSI.}
-         {Resumo}{\selectlanguage{portuguese}A evidência do mundo real no domínio médico refere-se a evidências clínicas derivadas da análise de dados do mundo real. Isto tornou-se possível devido às estratégias atuais para lidar com os problemas de interoperabilidade de bases de dados. À medida que essas estratégias foram amplamente adotadas, novos desafios na descoberta de dados surgiram. Um desses desafios é a descoberta de bases de dados para estudos específicos de saúde. Inicialmente, isso foi tratado usando catálogos de bases de dados e interfaces para comparar características de bases de dados. No entanto, essas soluções tornaram-se menos eficazes à medida que as redes de bases de dados se expandem. Com o objetivo de melhorar a descoberta de bases de dados e simplificar a execução de estudos multicêntricos, esta dissertação propõe um sistema conversacional de pesquisa para ajudar os investigadores médicos a encontrar de forma eficiente as bases de dados mais adequadas para os seus estudos. A solução implementa a técnica BM25 para a recuperação ideal de bases de dados e utiliza um grande modelo de linguagem (LLM) para tarefas de geração de texto e processamento de linguagem natural (NLP). Os resultados demonstram que o sistema conversacional de pesquisa melhora significativamente a eficiência na descoberta de bases de dados, mas, mais importante, simplifica o processo de definição de coortes em bases de dados observacionais.}
+\Abstract{Palavras Chave}{Sistema conversacional de pesquisa, Descoberta de dados biomédicos, LLM, RAG, EHDEN, OHDSI.}
+         {Resumo}{\selectlanguage{portuguese}A utilização e análise de dados médica em larga escala, permitiu que fosse possivel realizar estudos com mais impacto. Isto tornou-se possível devido às estratégias atuais para lidar com os problemas de interoperabilidade de bases de dados. À medida que essas estratégias foram adotadas,novos desafios surgiram, nomeadamente relacionados com a descoberta de base de dados adequadas a cada estudo. Inicialmente, isso foi tratado utilizando catálogos de bases de dados e interfaces para comparar características das mesmas. No entanto, essas soluções tornaram-se menos eficazes devido à complexidade dos dados existentes. Com o objetivo de simplificar a identificação das bases de dados adequadas e simplificar a realização de estudos distribuídos, esta dissertação propõe um sistema conversacional de pesquisa para ajudar os investigadores médicos a encontrar de forma eficiente as bases de dados mais adequadas para os seus estudos. é constituída por um modelo BM25 para sugerir as bases de dados mais adequadas, e também utilizada um modelo de linguagem para geração e processamento de texto em linguagem natural. Os resultados demonstram que o sistema conversacional de pesquisa melhora significativamente a eficiência na descoberta de bases de dados e simplifica o processo de definição de estudos observacionais.}
 
 %%% OPTIONAL: you can write the keywords and
 %%%  abstract in other languages. You can repeat
@@ -206,7 +206,7 @@ Por fim, dedico este trabalho à minha família que sempre me apoiou e tornou po
 %%% Don't remove the \selectlanguage statement or you will end with incorrect hyphenation.
 %%% You can modify the language to any other supported by Latex
 %% Optional Keywords and Abstract in additional languages.
-\Abstract{Keywords}{Conversational query builder, Biomedical data discovery, LLM, RAG, OMOP CDM, EHDEN, OHDSI.}
+\Abstract{Keywords}{Conversational query builder, Biomedical data discovery, LLM, RAG, EHDEN, OHDSI.}
          {Abstract}{Real-world evidence in the medical domain refers to clinical evidence derived from real-world data analysis. This become possible due to current strategies to handle the database interoperability issues. As these strategies have been widely adopted, new challenges in data discovery have appeared. One of these challenges is the discovery of databases for specific health studies. Initially, this was handled using database catalogs and interfaces to compare database characteristics. However, these solutions become less effective as database networks expand. Aiming to improve the discovery of databases and simplify the execution of multicenter studies, this dissertation proposes a conversational query builder to assist medical researchers in efficiently finding the most suitable databases for their studies. The solution implements the BM25 technique for optimal database retrieval and uses a large language model (LLM) for text generation and natural language processing (NLP) tasks. The results demonstrate that the conversational query builder significantly improves the efficiency of database discovery, but more importantly, it simplifies the process of defining cohorts over observational databases.}
 
 %%% Edit the Jury President information.
