--- a/uaThesisTemplate.sty
+++ b/uaThesisTemplate.sty
@@ -578,11 +578,11 @@ obten\c c\~ao do grau de {\ciDegreeTitle}
 \ifdefined \ciMAPProgram%
 no âmbito do Programa de Doutoramento
 \fi%
-em {\ciDegreeName}
+em {\ciDegreeName}, 
 \ifdefined \ciMAPProgram%
  das Universidades do Minho, Aveiro e Porto (MAP-\ciMAPProgram)
 \fi%
-, realizada sob a orienta\c c\~ao cient\'ifica 
+realizada sob a orienta\c c\~ao cient\'ifica 
 \ifdefined \ciSupervisoraName%
 da Doutora {\ciSupervisoraName}, Professora {\ciSupervisoraTitle}
 \else
